<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">maxvision</string>
    <string name="text_btn_Registro">Registro</string>
    <string name="text_btn_Prueba">Cátalogo</string>
    <string name="text_btn_Enviar">Enviar</string>
    <string name="text_autor">Yvette Santana Sánchez</string>
    <string name="text_version">Versión: 1</string>

    <string name="registro_nombre">Nombre</string>
    <string name="registro_apellidos">Apellidos</string>
    <string name="registro_correo">Correo</string>
    <string name="registro_numCuenta">Número de cuenta</string>
    <string name="registro_Carrera">Carrera</string>
    <string name="registro_Fecha">Fecha de nacimiento</string>
    <string name="registro_Dia">Dia</string>
    <string name="registro_Mes">Mes</string>
    <string name="registro_Annio">Año</string>
    <string name="Perfil_Edad">Edad</string>
    <string name="Perfil_Horoscopo">Horóscopo</string>
    <string name="Perfil_HoroscopoC">Horóscopo Chino</string>
    <string name="Perfil_Elemento">Elemento</string>


    <string name="language">Cambiar a ingles</string>
    <string name="greetin">¡ Maxvision te permite cambiar de idioma!</string>

    <!-- Titulos -->
    <string name="inicio_Perfil">Perfil</string>
    <string name="inicio_Registro">Registro</string>
    <string name="inicio_Bienvenido">Bienvenido</string>
    <string name="inicio_Catalogo">Cátalogo</string>


    <!-- notificación de errores -->
    <string name="error_nombre">Nombre no válido</string>
    <string name="error_apellido">Apellido no válido</string>
    <string name="error_correo">Correo no válido</string>
    <string name="error_num">Invalid account number</string>

    <!-- seccion de herramientas -->
    <string name="herramientas_numerologia">Numerología</string>
    <string name="herramientas_descripcionnum">Descripción: La fecha de nacimiento contiene información sobre nuestro carácter y la forma de vida que hemos elegido. </string>
    <string name="herramienta_color">Color de la suerte</string>
    <string name="herramientas_descripcioncolor">Descripción: El color de tu nacimiento tiene cierto impacto sobre ti.</string>
    <string name="herramienta_oscuro">Zodiaco Oscuro</string>
    <string name="herramientas_descripcionoscuro">Description: El zodiaco negro indica representa el lado maligno de cada uno de los signos.</string>

    <string name="herramienta_horoscopo">Horóscopo</string>
    <string name="herramientas_descripcionh">Descripción: Existen 12 signos tradicionales del zodiaco occidental son Aries, Tauro, Géminis, Cáncer, Leo, Virgo, Libra, Escorpio, Sagitario, Capricornio, Acuario y Piscis.</string>
    <string name="herramienta_horoscopochino">Horóscopo Chino</string>
    <string name="herramientas_descripcionchino">Descripción: El horóscopo chino es un ciclo repetitivo de 12 años donde cada año está representado por un animal y un elemento.</string>

</resources>