<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/color_btn"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/color_btn"
        android:text="@string/text_btn_Registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_probar"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/textoInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_Bienvenido"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="212dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoInicio"
        app:layout_constraintVertical_bias="0.061"
        app:srcCompat="@drawable/logob" />

    <Button
        android:id="@+id/btn_probar"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/color_btn"
        android:text="@string/text_btn_Prueba"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.152" />

    <Switch
        android:id="@+id/id_cambio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ES"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registro"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/textCambio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        app:layout_constraintBottom_toTopOf="@+id/id_cambio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registro"
        app:layout_constraintVertical_bias="0.84" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/petalos1" />

</androidx.constraintlayout.widget.ConstraintLayout>