<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_registro">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="550dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#B5F1F0F0"

            android:orientation="vertical">

            <EditText
                android:padding="15dp"
                android:id="@+id/id_nombreRegistro"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bordes_caja"
                android:ems="10"
                android:hint="@string/registro_nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/id_apellidosRegistro"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_below="@+id/id_nombreRegistro"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="23dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="424dp"
                android:background="@drawable/bordes_caja"
                android:ems="10"
                android:hint="@string/registro_apellidos"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/id_CorreoRegistro"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_apellidosRegistro"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="135dp"
                android:layout_marginEnd="21dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bordes_caja"
                android:ems="10"
                android:hint="@string/registro_correo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="15dp"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/id_numCuentaRegistro"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_below="@+id/id_CorreoRegistro"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="23dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="297dp"
                android:background="@drawable/bordes_caja"
                android:ems="10"
                android:hint="@string/registro_numCuenta"
                android:inputType="number"
                android:maxLength="9"
                android:minHeight="48dp"
                android:padding="15dp"
                android:textSize="18dp" />

            <Spinner

                android:id="@+id/id_Spinner_Carreras"
                android:layout_width="223dp"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="146dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="258dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="245dp"
                android:gravity="center"
                android:backgroundTint="@color/color_btn"


                />

            <Spinner
                android:backgroundTint="@color/color_btn"
                android:id="@+id/id_Spinner_Mes"
                android:layout_width="110dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="133dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="397dp"
                android:layout_marginEnd="149dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="105dp" />

            <Spinner
                android:backgroundTint="@color/color_btn"
                android:id="@+id/id_Spinner_Dia"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"

                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="397dp"
                android:layout_marginEnd="263dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="103dp" />

            <Spinner
                android:backgroundTint="@color/color_btn"
                android:id="@+id/id_Spinner_Annio"
                android:layout_width="135dp"
                android:layout_height="48dp"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="244dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="398dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="104dp" />

            <TextView
                android:textColor="@color/color_principal"
                android:id="@+id/id_text_Carrera"
                android:layout_width="102dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="265dp"
                android:layout_marginEnd="267dp"
                android:layout_marginBottom="253dp"
                android:text="@string/registro_Carrera"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="209dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="99dp"
                android:layout_marginTop="318dp"
                android:layout_marginEnd="99dp"
                android:layout_marginBottom="201dp"
                android:text="@string/registro_Fecha"
                android:textColor="@color/color_principal"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView

                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="39dp"
                android:layout_marginTop="369dp"
                android:layout_marginEnd="299dp"
                android:layout_marginBottom="155dp"
                android:text="@string/registro_Dia"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="161dp"
                android:layout_marginTop="368dp"
                android:layout_marginEnd="172dp"
                android:layout_marginBottom="156dp"
                android:text="@string/registro_Mes"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="277dp"
                android:layout_marginTop="367dp"
                android:layout_marginEnd="57dp"
                android:layout_marginBottom="154dp"
                android:text="@string/registro_Annio"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/boton_enviarR"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="454dp"

                android:layout_marginEnd="65dp"
                android:layout_marginBottom="42dp"
                android:text="@string/text_btn_Enviar"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.363" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_logo2"
        android:layout_width="103dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/logob" />

    <TextView
        android:id="@+id/text_registro"
        android:layout_width="99dp"
        android:layout_height="23dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/inicio_Registro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo2"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>