<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <TextView
        android:id="@+id/text_registro2"
        android:layout_width="87dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/inicio_Perfil"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="383dp"
        android:layout_height="616dp"
        android:background="#B5F1F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773"
        >

        <TextView
            android:id="@+id/id_resultadoNombre"
            android:layout_width="290dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="530dp"
            android:text="Nombre: "
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_resultado_horoscopo1"
            android:layout_width="99dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="125dp"
            android:layout_marginTop="421dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="159dp"
            android:text="@string/Perfil_Horoscopo"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/id_resultado_elemento"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="263dp"
            android:layout_marginTop="473dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="113dp"
            android:text="@string/Perfil_Elemento"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/id_img_carrera"
            android:layout_width="97dp"
            android:layout_height="93dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="146dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="455dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_image" />

        <TextView
            android:id="@+id/id_resultadoCarrera"
            android:layout_width="236dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="107dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="409dp"
            android:text="Carrera: "
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textNumCuenta"
            android:layout_width="141dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="217dp"
            android:layout_marginEnd="205dp"
            android:layout_marginBottom="365dp"
            android:text="@string/registro_numCuenta"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_resultadoNumCuenta"
            android:layout_width="166dp"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="178dp"
            android:layout_marginTop="217dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="362dp"
            android:text="Num. Cuenta: "
            android:textSize="17dp" />

        <TextView
            android:id="@+id/id_resultadoCorreo"
            android:layout_width="250dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="92dp"
            android:layout_marginTop="269dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="309dp"
            android:text="Correo: "
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textCorreo"
            android:layout_width="60dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="269dp"
            android:layout_marginEnd="286dp"
            android:layout_marginBottom="319dp"
            android:text="@string/registro_correo"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/textView15"
            android:layout_width="164dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="326dp"
            android:layout_marginEnd="182dp"
            android:layout_marginBottom="251dp"
            android:text="@string/registro_Fecha"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_resultadoFecha"
            android:layout_width="147dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="195dp"
            android:layout_marginTop="327dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="257dp"
            android:text="Dia:"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/id_resultadoEdad"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="83dp"
            android:layout_marginTop="378dp"
            android:layout_marginEnd="231dp"
            android:layout_marginBottom="213dp"
            android:text="edad... "
            android:textSize="17dp" />

        <TextView

            android:id="@+id/textEdad"
            android:layout_width="41dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="377dp"
            android:layout_marginEnd="304dp"
            android:layout_marginBottom="217dp"
            android:text="@string/Perfil_Edad"
            android:textSize="17dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/id_img_horoscopo2"
            android:layout_width="92dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="237dp"
            android:layout_marginTop="367dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="159dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_image" />

        <TextView
            android:id="@+id/textHoroscopo1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="421dp"
            android:layout_marginEnd="253dp"
            android:layout_marginBottom="165dp"
            android:text="@string/Perfil_Horoscopo"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textHoroscopo2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="473dp"
            android:layout_marginEnd="185dp"
            android:layout_marginBottom="113dp"
            android:text="@string/Perfil_HoroscopoC"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_resultado_horoscopo2"
            android:layout_width="91dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="183dp"
            android:layout_marginTop="474dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="113dp"
            android:text="@string/Perfil_HoroscopoC"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/id_img_horoscopoChino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="108dp"
            android:layout_marginTop="514dp"
            android:layout_marginEnd="203dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_image" />

        <ImageView
            android:id="@+id/id_img_horoscopoChinoElemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="193dp"
            android:layout_marginTop="512dp"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_image" />

        <TextView
            android:id="@+id/textCarrera"
            android:layout_width="71dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="174dp"
            android:layout_marginEnd="277dp"
            android:layout_marginBottom="410dp"
            android:text="@string/registro_Carrera"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>